crossplane/aws/eks/template/originals/networking.yaml
apiVersion: ec2.aws.m.upbound.io/v1beta1
kind: Route
metadata:
  name: private-route-nat
spec:
  providerConfigRef:
    name: default
    kind: ClusterProviderConfig
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: private-rt
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: cheap-nat-gw
---
apiVersion: ec2.aws.m.upbound.io/v1beta1
kind: Route
metadata:
  name: public-route-igw
spec:
  providerConfigRef:
    name: default
    kind: ClusterProviderConfig
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: public-rt
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: cheap-eks-igw
